--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dictionaryx
 description: English dictionary with about 120.000 entries, based on Wordnet.
-version: 0.3.0
+version: 0.3.3
 repository: https://github.com/xErik/dictionaryx
 issue_tracker: https://github.com/xErik/dictionaryx/issues
 
@@ -11,10 +11,19 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  # For the one dictionairy that loads assets
+  # flutter:
+  #   sdk: flutter
+  
+# flutter:
+#   assets:
+#     - assets/
+
+# assets:
+#   - assets/defs/
 
 dev_dependencies:
   lints: ^2.0.0
   path: ^1.8.1
   test: ^1.21.1
 
- 
