--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,17 +28,16 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: checkout-files
-        uses: Bhacaz/checkout-files@v2
-        with:
-          files: ./example/flutter_example/
-        
+      - name: Experiment
+        run: |
+          cd ./example/flutter_example/
+
       - name: Setup Pages
         uses: actions/configure-pages@v2
-      
+
       - name: Flutter action
         uses: subosito/flutter-action@v2.6.2
         with:
