--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./build/web/
+          path: ./example/flutter_example/build/web/
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
